Get a doc charset and use it for nsIURI and removed unnecessary convert/escape part, bug 162523, r=darin, sr=jst.